--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
     "express": "^4.21.1",
     "express-validator": "^7.2.0",
     "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.7.2",
+    "nodemailer": "^6.9.15"
+  },
+  "devDependencies": {
     "nodemon": "^3.1.7"
   },
   "name": "backend",
   "version": "1.0.0",
   "main": "index.js",
-  "devDependencies": {},
   "scripts": {
     "server": "nodemon index.js"
   },
